src/test/ui/dropck/dropck-eyepatch-extern-crate.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/dropck-eyepatch-extern-crate.rs:39:20: in fn main
   |
LL |     dt = Dt("dt", &c);
   |                    ^ borrowed value does not live long enough
...
LL | }
   | - `c` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c` does not live long enough
  --> $DIR/dropck-eyepatch-extern-crate.rs:41:20: in fn main
   |
LL |     dr = Dr("dr", &c);
   |                    ^ borrowed value does not live long enough
...
LL | }
   | - `c` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c` does not live long enough
  --> $DIR/dropck-eyepatch-extern-crate.rs:49:29: in fn main
   |
LL |     pt = Pt("pt", &c_long, &c);
   |                             ^ borrowed value does not live long enough
...
LL | }
   | - `c` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c` does not live long enough
  --> $DIR/dropck-eyepatch-extern-crate.rs:51:29: in fn main
   |
LL |     pr = Pr("pr", &c_long, &c);
   |                             ^ borrowed value does not live long enough
...
LL | }
   | - `c` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0597`.
